fixed overflow border

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -25,7 +25,6 @@
   min-height: 200px;
   text-align: center;
   position: relative;
-  overflow: scroll;
 }
 
 .right-content {
